[package]
name = "jupiter-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = {version = "0.13.1"}
env_logger = "0.10.0"
fantoccini = "0.19.3"
futures = "0.3.29"
lazy_static = "1.4.0"
log = "0.4.20"
once_cell = "1.18.0"
reqwest = {version = "0.11.22", features = ["cookies"]}
scraper = "0.18.1"
serde_json = "1.0.107"
tokio = {version = "1.33.0", features = ["full"]}
