[package]
name = "jupiter-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = {version = "0.13.1"}
actix-web = "4.4.0"
env_logger = "0.10.0"
fantoccini = "0.19.3"
futures = "0.3.29"
html-escape = "0.2.13"
lazy_static = "1.4.0"
log = "0.4.20"
once_cell = "1.18.0"
reqwest = {version = "0.11.22", features = ["cookies"]}
select = "0.6.0"
serde = "1.0.190"
serde_json = "1.0.107"
tokio = {version = "1.33.0", features = ["full"]}
